--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -23,6 +25,10 @@
     "helmet": "^7.1.0",
     "http-status": "^1.7.4",
     "joi": "^17.12.3",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "xss-filters": "^1.2.7"
   },
   "devDependencies": {
@@ -30,7 +36,10 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-serve-static-core": "^4.17.43",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.4",
+    "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^4.0.1",
     "@types/xss-filters": "^0.0.30",
     "cross-env": "^7.0.3",
     "prisma": "^5.12.1",
