--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "commit": "git-cz",
     "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
+    "build": "rm -rf ./build && tsc -p tsconfig.json",
     "docker:dev-db:start": "docker-compose -f docker-compose.only-db-dev.yml up -d",
     "docker:dev-db:stop": "docker-compose -f docker-compose.only-db-dev.yml down",
     "migrate:dev": "npx prisma migrate dev",
     "db:studio": "prisma studio"
   },
   "keywords": [],
-  "author": "",
+  "author": "Saurav Chanda",
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
@@ -44,6 +45,7 @@
     "@types/xss-filters": "^0.0.30",
     "cross-env": "^7.0.3",
     "prisma": "^5.12.1",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.4"
   }
 }
