--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,16 @@
     "outDir": "./build",
     "module": "commonjs",
     "types": ["node"],
+    "strict": false,
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
     "skipLibCheck": true,
-    "strictNullChecks": true
-  }
+    "strictNullChecks": true,
+    "rootDir": ".",
+  },
+  "include": [
+    "src/"
+  ],
+  "exclude": ["node_modules", "build"]
 }
